# DeepReviewer-v2

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
deepreview/: __init__.py  config.py  runner.py  state.py  storage.py  types.py
deepreview/adapters/: llm.py  markdown_parser.py  mineru.py  paper_search.py
deepreview/prompts/: review_agent_prompt.py
deepreview/report/: final_report.py  pdf_export.py  review_report_pdf.py  source_annotations.py
deepreview/tools/: review_tools.py
docs/: paper_search_providers.md
pasa/: .pasa_env.example  PASA_DECOUPLING_README.md  README.md  README.zh-CN.md  pasa_server.py  start_pasa_server.sh  test_pasa_decoupling.py
pasa/legacy/: pasa_tool_heavy.py
pasa/pasa/: agent_prompt.json  models.py  paper_agent.py  paper_node.py  utils.py  vllm_agent.py
scripts/: build_release_bundle.sh  release_audit.sh
tests/: test_retrieval_disabled_mode.py
