[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepreview2-backend"
version = "0.1.0"
description = "Minimal backend-only DeepReviewer 2.0 pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "DeepReview2 OSS"}]
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "openai-agents>=0.6.0",
  "reportlab>=4.2.0",
  "pypdf>=4.3.0",
  "fonttools>=4.54.0",
  "pymupdf>=1.26.0",
  "mdit-py-plugins>=0.4.2",
  "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
]
pasa = [
  "flask>=3.0.0",
  "flask-cors>=5.0.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0",
  "arxiv>=2.1.0",
  "transformers>=4.45.0",
  "torch>=2.4.0",
  "vllm>=0.6.0",
  "openai>=1.52,<1.76",
]
legacy = [
  "mcp>=1.0.0",
]

[tool.setuptools]
packages = [
  "deepreview",
  "deepreview.adapters",
  "deepreview.tools",
  "deepreview.prompts",
  "deepreview.report",
]

[tool.ruff]
line-length = 100
target-version = "py311"
